updated source files

--- a/jeopardy_source/Makefile
+++ b/jeopardy_source/Makefile
@@ -1,27 +1,25 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -std=c99
-LFLAGS = 
-LIBS = 
-SOURCES = jeopardy.c questions.c players.c
-OBJECTS = $(subst .c,.o,$(SOURCES))
-EXE = jeopardy.exe
-.PHONY: clean help
 
-jeopardy.exe : jeopardy.o questions.o players.o
-	$(CC) $(CFLAGS) $^ $(LIBS) -o $@ 
+SRCDIR = src
+OBJDIR = obj
+BINDIR = bin
 
-%.o : %.c
-	$(CC) $(CFLAGS) -c $< 
+SRC = $(wildcard $(SRCDIR)/*.c)
+OBJ = $(SRC:$(SRCDIR)/%.c=$(OBJDIR)/%.o)
+EXEC = jeopardy
 
-all : $(EXE)
+.PHONY: all clean
+
+all: $(BINDIR)/$(EXEC)
+
+$(BINDIR)/$(EXEC): $(OBJ)
+	@mkdir -p $(BINDIR)
+	$(CC) $(CFLAGS) $^ -o $@
+
+$(OBJDIR)/%.o: $(SRCDIR)/%.c
+	@mkdir -p $(OBJDIR)
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJECTS) $(EXE) *~
-
-cleanup:
-	rm -f $(OBJECTS) *~
-
-help:
-	@echo "Valid targets:"
-	@echo "  all:    generates all binary files"
-	@echo "  clean:  removes .o and .exe files"
+	@rm -rf $(OBJDIR) $(BINDIR)
